Made changes to the title (still incomplete)

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -1,5 +1,5 @@
-<h2>About Compass</h2>
-<p>Compass has been designed with something very specific in mind: to be a simple and elegant personal landing page.</p>
+<h2>About</h2>
+<p>I am a first year MS by Research student at Robotics Research Center(IIIT Hyderabad), under the guidance of Dr. Madhava Krishna. Currently, I am interested in solving computer vision and robotics tasks using deep reinforcement learning.</p>
 
 <h2>Features</h2>
 <ul>
